z-index fix
Set page contents to z-index of 1 so elements don’t display over menu overlay

--- a/src/routes/team/home/Home.scss
+++ b/src/routes/team/home/Home.scss
@@ -9,6 +9,8 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  z-index: 1; /* set page z-index below hamburger menu overlay */
+  position: relative;
 }
 
 .listContainer {
