--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -17,6 +17,8 @@
   background: $white-color;
   padding-bottom: 2em;
   padding-top: 1em;
+  z-index: 1; /* set page z-index below hamburger menu overlay */
+  position: relative;
 }
 
 @mixin autosuggest-container {
